@@ -1,5 +1,13 @@
 *SVN*
 
+* Change belongs_to so that the foreign_key assumption is taken from the association name, not the class name.  Closes #8992 [hasmanyjosh]
+
+  OLD
+    belongs_to :visitor, :class_name => 'User' # => inferred foreign_key is user_id
+    
+  NEW
+    belongs_to :visitor, :class_name => 'User' # => inferred foreign_key is visitor_id
+
 * Remove spurious tests from deprecated_associations_test, most of these aren't deprecated, and are duplicated in associations_test.  Closes #8987 [lifofifo]
 
 * Make create! on a has_many :through association return the association object.  Not the collection.  Closes #8786 [lifofifo]
